# start-menu

./: .gitignore  Cargo.toml  PKGBUILD  README.md  justfile  package.nix
.devcontainer/: devcontainer.json
applet/: Cargo.toml
applet/i18n/cs/: cosmic_ext_classic_menu_applet.ftl
applet/src/: applet.rs  applet_button.rs  applet_menu.rs  config.rs  lib.rs  main.rs
applet/src/dbus/: interface.rs  mod.rs
applet/src/logic/: apps.rs
applet/src/model/: application_category.rs  application_entry.rs  mod.rs  popup_type.rs  power_action.rs  system_tool.rs  user.rs
applet/src/widgets/: mod.rs  virtualized_app_list.rs
flatpak/: com.championpeak87.cosmic-ext-classic-menu.desktop  com.championpeak87.cosmic-ext-classic-menu.json  launch-applet.sh
res/: com.championpeak87.cosmic-ext-classic-menu.desktop  com.championpeak87.cosmic-ext-classic-menu.metainfo.xml  fun.wmde.start-menu.metainfo.xml  packaging.just
rpm/: cosmic-ext-classic-menu.spec
settings/: Cargo.toml
settings/i18n/ar/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/cs/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/de/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/en/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/es/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/es-419/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/fa/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/fr/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/hi/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/hu/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/it/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/ja/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/kn/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/i18n/ko/: cosmic_ext_classic_menu_settings.ftl  wmde_start_menu_settings.ftl
settings/src/: app.rs  main.rs
(+23 files in other folders)
