[workspace]
resolver = "2"
members = ['applet', 'settings']

[workspace.dependencies]
# Unified workspace dependency versions to avoid duplicate resolution
i18n-embed = "0.16"
i18n-embed-fl = "0.10"
rust-embed = "8.9.0"
open = "5.3.3"
simple_logger = "5.1.0"
log = "0.4.29"
users = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.49.0"
futures = "0.3.31"

# Unify every transitive libcosmic pull (cosmic-app-list-config, cosmic-settings-config,
# etc.) on the local WMDE v2 fork by path, all URL variants, so a single
# libcosmic/cosmic-config/cosmic-theme resolves in the graph (comp/files pattern).
[patch."https://github.com/pop-os/libcosmic"]
libcosmic = { path = "../libcosmic" }
cosmic-config = { path = "../libcosmic/cosmic-config" }
cosmic-config-derive = { path = "../libcosmic/cosmic-config-derive" }
cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[patch."https://github.com/pop-os/libcosmic.git"]
libcosmic = { path = "../libcosmic" }
cosmic-config = { path = "../libcosmic/cosmic-config" }
cosmic-config-derive = { path = "../libcosmic/cosmic-config-derive" }
cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[patch."https://github.com/pop-os/libcosmic/"]
cosmic-config = { path = "../libcosmic/cosmic-config" }
cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# libcosmic itself pulls cosmic-settings-config from pop-os for its own shortcuts
# lookup; redirect that transitive copy to the WMDE fork too (A.6) so the whole
# graph resolves a single cosmic-settings-config whose Shortcuts context flips to
# fun.wmde.Settings.Shortcuts once the daemon rebrand lands.
[patch."https://github.com/pop-os/cosmic-settings-daemon"]
cosmic-settings-config = { path = "../wmde-settings-daemon/config" }
